--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7,7 +7,7 @@
   font-family: Helvetica;
   background-color: rgb(240, 240, 240);
   border: 1px solid #000;
-  width: 760px;
+  /*width: 760px;*/
   height: 780px;
   margin-top: 3%;
 }
