--- a/app/css/main.css
+++ b/app/css/main.css
@@ -29,6 +29,7 @@
 .content {
   height: 476px;
   padding: 20px;
+  padding-bottom: 60px;
 }
 
 .footer {
@@ -59,4 +60,17 @@
   display: inline-block;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+.instructeur-table, .leden-table {
+  border: 1px solid #000;
+}
+
+.instructeur-table td, .leden-table td {
+  border: 1px solid #000;
+  padding: 10px;
+}
+
+.addinst-form input, .addinst-form select, .editinst-form input, .editinst-form select, .addtraining-form input, .edittraining-form input {
+  width: 300px;
 }
