--- a/app/css/main.css
+++ b/app/css/main.css
@@ -7,11 +7,11 @@
   font-family: Helvetica;
   background-color: rgb(240, 240, 240);
   border: 1px solid #000;
-  /*width: 760px;*/
+  width: 950px;
   height: 780px;
   margin-top: 3%;
 }
-
+/*////////// header //////////*/
 .header {
   border-bottom: 1px solid #000;
   height: 150px;
@@ -22,35 +22,21 @@
   float: left;
 }
 
-.login {
-  float: right;
-}
-
-.content {
-  height: 476px;
-  padding: 20px;
-  padding-bottom: 60px;
-}
-
-.footer {
-  float: left;
-  background: red; /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(red, blue); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(red, blue); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(red, blue); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(red, blue); /* Standard syntax */
-  width: 100%;
-}
-
-.footer table tr:nth-child(2) {
-  color: #fff;
-}
-
 .logo img {
   width: 164px;
   height: 110px;
 }
 
+.login {
+  float: right;
+  margin-top: -90px;
+}
+
+.header-text{
+  font-size: 30px;
+}
+/*///////// end header /////////*/
+/*///////// nav /////////*/
 .nav ul {
   list-style-type: none;
   padding-left: 20px;
@@ -61,7 +47,53 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+/*///////// end nav /////////*/
+/*///////// body /////////*/
+.content {
+  height: 476px;
+  padding: 20px;
+  padding-bottom: 60px;
+}
 
+body>section>#content {
+
+    padding: 20px 0px 20px 0;
+    width: 820px;
+    border-left: 200px solid #ccffcc;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+/*////////// end body //////////*/
+/*///////// footer /////////*/
+.footer {
+  float: left;
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(red, blue); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(red, blue); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(red, blue); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(red, blue); /* Standard syntax */
+  width: 952px;
+  margin-left: -1px;
+}
+
+.footer table tr:nth-child(2) {
+  color: #fff;
+}
+/*///////// end footer /////////*/
+/*///////// leden ////////////*/
 .instructeur-table, .leden-table {
   border: 1px solid #000;
 }
@@ -74,3 +106,34 @@
 .addinst-form input, .addinst-form select, .editinst-form input, .editinst-form select, .addtraining-form input, .edittraining-form input {
   width: 300px;
 }
+/*///////// end leden ////////////*/
+/*////////////  bezoeker registratie  //////////////*/
+.table1{
+  margin-left: 28px;
+}
+
+.table2{
+  padding: 1px;
+  margin-left: -50;
+  margin-top: 30;
+}
+
+.table2 input{
+  margin-left: 82px;
+}
+
+.gbrnm-r{
+  float: right;
+}
+
+.text-dis{
+  margin-left: 180px;
+  margin-bottom: 15px;
+}
+
+.size-lg{
+  width: 325px;
+  height: 20px;
+  padding: 1px;
+}
+/*////////////  end bezoeker registratie  //////////////*/
