--- a/app/css/main.css
+++ b/app/css/main.css
@@ -18,6 +18,30 @@
   padding: 20px;
 }
 
+.nav{
+  text-align: center;
+}
+.nav ul {
+  list-style-type: none;
+  padding-left: 20px;
+}
+
+.nav ul li {
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #a51212;
+}
+
+a{
+  text-decoration: none;
+  color:#fff;
+}
+.nav ul li:hover{
+  background-color: #fff;
+}
+a:hover{color:#a51212;}
+
 .logo {
   float: left;
 }
@@ -48,15 +72,4 @@
 .logo img {
   width: 164px;
   height: 110px;
-}
-
-.nav ul {
-  list-style-type: none;
-  padding-left: 20px;
-}
-
-.nav ul li {
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
 }
