--- a/app/css/main.css
+++ b/app/css/main.css
@@ -32,6 +32,15 @@
   padding-right: 10px;
   background-color: #a51212;
 }
+form td{
+  background-color: #000;
+  color: #fff;
+}
+form td input,form td select{
+  width: 100%;
+  border: 2px solid white;
+  color: #a51212;
+}
 
 a{
   text-decoration: none;
