--- a/app/css/main.css
+++ b/app/css/main.css
@@ -18,39 +18,6 @@
   padding: 20px;
 }
 
-.nav{
-  text-align: center;
-}
-.nav ul {
-  list-style-type: none;
-  padding-left: 20px;
-}
-
-.nav ul li {
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color: #a51212;
-}
-form td{
-  background-color: #000;
-  color: #fff;
-}
-form td input,form td select{
-  width: 100%;
-  border: 2px solid white;
-  color: #a51212;
-}
-
-a{
-  text-decoration: none;
-  color:#fff;
-}
-.nav ul li:hover{
-  background-color: #fff;
-}
-a:hover{color:#a51212;}
-
 .logo {
   float: left;
 }
@@ -80,6 +47,40 @@ a:hover{color:#a51212;}
   padding-left: 10px;
   padding-right: 10px;
 }
+
+.nav{
+  text-align: center;
+}
+.nav ul {
+  list-style-type: none;
+  padding-left: 20px;
+}
+
+.nav ul li {
+  display: inline-block;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #bd30ff;
+}
+form td{
+  background-color: #000;
+  color: #fff;
+}
+form td input,form td select{
+  width: 100%;
+  border: 2px solid white;
+  color: #bd30ff;
+}
+
+a{
+  text-decoration: none;
+  color:#000;
+}
+.nav ul li:hover{
+  background-color: #fff;
+}
+a:hover{color:#bd30ff;}
+
 /*///////// end nav /////////*/
 /*///////// body /////////*/
 .content {
