update instructeur lessen overzicht/header name content

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -44,7 +44,7 @@ form td input,form td select{
 
 a{
   text-decoration: none;
-  color:#fff;
+  color: #451200;
 }
 .nav ul li:hover{
   background-color: #fff;
